# unnecessarily_complex_rust_project

./: .gitignore  Readme.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
models/: Cargo.toml
models/src/: id.rs  lib.rs  task_list.rs  thing.rs  todo.rs  tribe.rs  user.rs
