[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotent = "0.2.10"
dotenv_codegen = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
models = { path = "../models" }
tokio = { version = "1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
